--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,50 @@
   }
 }
 
+h1 {
+  font-weight: 700;
+  font-size: 2em;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 1.17em;
+}
+
+h4 {
+  font-weight: 700;
+  font-size: 1em;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 0.83em;
+}
+
+h6 {
+  font-weight: 700;
+  font-size: 0.67em;
+}
+
+p {
+  font-weight: 400;
+  font-size: 1em;
+}
+
+b {
+  font-weight: 900;
+}
+
 body {
+  font-weight: 400;
+  font-size: 1em;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
