--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,3 +63,73 @@ body {
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+.gradient-text-animation {
+  position: relative;
+  display: inline-block;
+}
+
+.gradient-text-animation::before {
+  content: attr(data-content);
+  /* Use the content attribute to preserve the original text */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, rgba(139, 92, 246, 0.8) 0%, rgba(90, 206, 214, 0.8) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  z-index: -1;
+  /* Move the pseudo-element behind the actual text */
+  animation: colorAnimation 5s linear infinite;
+}
+
+.bg-animation {
+  width: 100%;
+  height: 200px;
+  animation: colorAnimation 5s linear infinite;
+}
+
+@keyframes colorAnimation {
+  0% {
+    background: linear-gradient(45deg, rgba(139, 92, 246, 0.8) 90%, rgba(90, 206, 214, 0.8) 10%);
+  }
+
+  10% {
+    background: linear-gradient(81deg, rgba(139, 92, 246, 0.8) 80%, rgba(90, 206, 214, 0.8) 20%);
+  }
+
+  30% {
+    background: linear-gradient(117deg, rgba(139, 92, 246, 0.8) 70%, rgba(90, 206, 214, 0.8) 30%);
+  }
+
+  40% {
+    background: linear-gradient(153deg, rgba(139, 92, 246, 0.8) 60%, rgba(90, 206, 214, 0.8) 40%);
+  }
+
+  50% {
+    background: linear-gradient(189deg, rgba(139, 92, 246, 0.8) 55%, rgba(90, 206, 214, 0.8) 45%);
+  }
+
+  60% {
+    background: linear-gradient(225deg, rgba(139, 92, 246, 0.8) 45%, rgba(90, 206, 214, 0.8) 55%);
+  }
+
+  70% {
+    background: linear-gradient(261deg, rgba(139, 92, 246, 0.8) 40%, rgba(90, 206, 214, 0.8) 60%);
+  }
+
+  80% {
+    background: linear-gradient(297deg, rgba(139, 92, 246, 0.8) 30%, rgba(90, 206, 214, 0.8) 70%);
+  }
+
+  90% {
+    background: linear-gradient(333deg, rgba(139, 92, 246, 0.8) 20%, rgba(90, 206, 214, 0.8) 80%);
+  }
+
+  100% {
+    background: linear-gradient(9deg, rgba(139, 92, 246, 0.8) 10%, rgba(90, 206, 214, 0.8) 90%);
+  }
+}
